[tool.poetry]
name = "elocator"
version = "0.1.0"
description = "A project to help identify the Elo of a chess player based on a set of moves or games. Can be used to identify cheating, game throwing, or other anomalies in a players game."
authors = ["Caleb Wetherell <cmwetherell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chess = "^1.10.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
plotly = "^5.18.0"
statsmodels = "^0.14.1"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
jsonify = "^0.5"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
torch = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
